revised to try and link html to css

--- a/index.html/index.html
+++ b/index.html/index.html
@@ -1,48 +1,42 @@
 <!DOCTYPE html>
-
 <html>
 <head>
-	<link href="resources/css/style.css" rel="stylesheet" type="text/css">
-
+	<link href="resources/css/style.css/style.css" rel="stylesheet" type="text/css">
 	<title>Broadway Website</title>
 </head>
-
 <body>
-
-  <!--Main Menu-->
-
-  <div class="menu">
-  <h1 class="bd">Broadway Design</h1>
-    <h2 <a href="#home">Home</a></h2>
-      <h2 <a href="#about">About</a></h2>
-      <h2 <a href="#work">Work</a></h2>
-      <h2 <a href="#team">Team</a></h2>
-      <h2 <a href="#contact">Contact</a></h2>
-</div>
-
-      <!--About Section-->
-
-      <div class="about">
-        <h1 class="process">Our Process</h1>
-        <img src="resources/images/identify.svg" alt="picture of downward swirling curly q arrow" >
-        <h2>Identity</h2>
-        <p>We focus on the most important details</p>
-        <img src="resources/images/understand.svg" alt="picture of two arrows bending to make a circle">
-        <h2>Understand</h2>
-        <p>We study our projectsn inside and out</p>
-        <img src="resources/images/execute.svg" alt="picture of hand drawn 3d arrow pointing at upward angle">
-        <h2>Execute</h2>
-        <p>We put everything we have into our work</p>
-      </div>
-
-        <!--Work Section-->
-<div class="work">
-  <h1 class="DINY">Designed in New York</h1>
-  <h2>Portfolio</h2>
-
-
-
-
-
-      </body>
-    </html>
+	<!--Main Menu-->
+	<div class="menu">
+		<h1 id="bd">Broadway Design</h1>
+		<h2><a href="#home">Home</a></h2>
+		<h2><a href="#about">About</a></h2>
+		<h2><a href="#work">Work</a></h2>
+		<h2><a href="#team">Team</a></h2>
+		<h2><a href="#contact">Contact</a></h2>
+	</div><!--About Section-->
+	<div class="about">
+		<h1 id="process">Our Process</h1><img alt="picture of downward swirling curly q arrow" src="resources/images/identify.svg">
+		<h2>Identity</h2>
+		<p>We focus on the most important details</p><img alt="picture of two arrows bending to make a circle" src="resources/images/understand.svg">
+		<h2>Understand</h2>
+		<p>We study our projectsn inside and out</p><img alt="picture of hand drawn 3d arrow pointing at upward angle" src="resources/images/execute.svg">
+		<h2>Execute</h2>
+		<p>We put everything we have into our work</p>
+	</div><!--Work Section-->
+	<div class="work">
+		<h1 class="DINY">Designed in New York</h1>
+		<h2>Portfolio</h2>
+		<p>Coming Soon</p>
+	</div><!--Team Section-->
+	<div class="team">
+		<h2>Team</h2>
+		<p>We're Hiring</p>
+	</div><!--Contact Section-->
+	<div class="contact">
+		<h2>Contact</h2>
+		<p>Phone (555)-555-5555</p>
+		<p>E-mail: test@example.com</p>
+		<p>Twitter: @test</p>
+	</div>
+</body>
+</html>
