--- a/index.html
+++ b/index.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link href="resources/css/style.css/style.css" rel="stylesheet" type="text/css">
+  <link href="resources/css/style.css" rel="stylesheet" type="text/css">
+
 	<title>Broadway Website</title>
 </head>
 <body>
 	<!--Main Menu-->
-	<div class="menu">
-		<h1 id="bd">Broadway Design</h1>
+	<div id="home">
+		<h1 class="bd">Broadway Design</h1>
 		<h2><a href="#home">Home</a></h2>
 		<h2><a href="#about">About</a></h2>
 		<h2><a href="#work">Work</a></h2>
 		<h2><a href="#team">Team</a></h2>
 		<h2><a href="#contact">Contact</a></h2>
 	</div><!--About Section-->
-	<div class="about">
+	<div id="about">
 		<h1 id="process">Our Process</h1><img alt="picture of downward swirling curly q arrow" src="resources/images/identify.svg">
 		<h2>Identity</h2>
 		<p>We focus on the most important details</p><img alt="picture of two arrows bending to make a circle" src="resources/images/understand.svg">
@@ -23,20 +24,27 @@
 		<h2>Execute</h2>
 		<p>We put everything we have into our work</p>
 	</div><!--Work Section-->
-	<div class="work">
+	<div id="work">
 		<h1 class="DINY">Designed in New York</h1>
 		<h2>Portfolio</h2>
 		<p>Coming Soon</p>
 	</div><!--Team Section-->
-	<div class="team">
+	<div id="team">
 		<h2>Team</h2>
 		<p>We're Hiring</p>
 	</div><!--Contact Section-->
-	<div class="contact">
+	<div id="contact">
 		<h2>Contact</h2>
 		<p>Phone (555)-555-5555</p>
 		<p>E-mail: test@example.com</p>
 		<p>Twitter: @test</p>
 	</div>
+
+<!--Footer-->
+
+<div id="footer">
+<h3>&copy Broadway<a href="#home">Home<a/><a href="#about">About</a><a href="#work">Work</a><a href="#team">Team</a><a href="#contact">Contact</a></h3>
+</div>
+
 </body>
 </html>
