--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link href="resources/css/style.css" rel="stylesheet" type="text/css">
-
+	<link href="resources/css/style.css" rel="stylesheet" type="text/css">
 	<title>Broadway Website</title>
 </head>
 <body>
@@ -38,13 +37,9 @@
 		<p>Phone (555)-555-5555</p>
 		<p>E-mail: test@example.com</p>
 		<p>Twitter: @test</p>
+	</div><!--Footer-->
+	<div id="footer">
+		<h3 class="white">&copy; Broadway<a href="#home">Home</a><a href="#about">About</a><a href="#work">Work</a><a href="#team">Team</a><a href="#contact">Contact</a></h3>
 	</div>
-
-<!--Footer-->
-
-<div id="footer">
-<h3>&copy Broadway<a href="#home">Home<a/><a href="#about">About</a><a href="#work">Work</a><a href="#team">Team</a><a href="#contact">Contact</a></h3>
-</div>
-
 </body>
 </html>
